# bevpg

./: Cargo.toml  README.md
assets/maps/: test.txt
src/: animator.rs  audio.rs  combat.rs  consts.rs  main.rs  npc.rs  player.rs  tilemap.rs  transition.rs  ui.rs
src/core/: animator.rs  assets.rs  audio.rs  debug.rs  mod.rs  tilemap.rs  transition.rs
src/scenes/: main_menu.rs  mod.rs  overworld.rs
src/ui/: button.rs  dialog.rs  mod.rs
src/util/: math.rs
