[package]
name = "bevpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
bevy-inspector-egui = "0.17"
bevy_kira_audio = "0.13.0"

[dependencies.bevy]
version = "0.9"
default-features = false
features = [
    "bevy_asset",
    "bevy_scene",
    "bevy_gilrs",
    "bevy_winit",
    "animation",
    "x11",
    "filesystem_watcher",

    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",

    "png",

    "wayland",
    "subpixel_glyph_atlas",

    "dynamic",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

